--- a/packages/client/src/scss/components/shared/EntityCard.module.scss
+++ b/packages/client/src/scss/components/shared/EntityCard.module.scss
@@ -6,6 +6,7 @@
   border-radius: 20px;
   gap: 1rem;
   width: 24rem;
+  min-width: 16rem;
   height: auto;
 
   transition: $crispyTransformTransition;
