--- a/packages/client/src/scss/components/shared/Footer.module.scss
+++ b/packages/client/src/scss/components/shared/Footer.module.scss
@@ -3,11 +3,21 @@
 .footerContainer {
   @include flexCenter(column);
   width: 100%;
-  max-height: $maxFooterHeight;
   padding: $footerPadding;
   background-color: $footerBackgroundColor;
   margin-top: auto;
   gap: $footerDistanceBetweenSections;
+
+  @media screen and (max-width: 1500px) {
+    padding: 4rem 8rem;
+  }
+
+  @media screen and (max-width: 1200px) {
+    padding: 4rem 4rem;
+  }
+  @media screen and (max-width: 650px) {
+    padding: 4rem 2rem;
+  }
 }
 
 .footerPageLinksList {
@@ -21,9 +31,20 @@
 
   li {
     @include flexCenter(row);
-    flex: 1 0 100% / $numberOfFooterPageLinksPerRow;
-    max-width: 100% / $numberOfFooterPageLinksPerRow;
+    flex: 1 0 (100% / 4);
+    max-width: (100% / 4);
     justify-content: flex-start;
+
+    @media screen and (max-width: 1200px) {
+      flex: 1 0 (100% / 2);
+      max-width: (100% / 2);
+      justify-content: center;
+    }
+
+    @media screen and (max-width: 650px) {
+      flex: 1 0 (100% / 2);
+      max-width: (100% / 2);
+    }
   }
 }
 
@@ -50,6 +71,10 @@
       transform: translateX(10px);
       color: getColor("secondary-color-light-2.4");
     }
+
+    @media screen and (max-width: 1200px) {
+      text-align: center;
+    }
   }
 }
 
@@ -58,9 +83,17 @@
   justify-content: space-between;
   width: 100%;
 
+  @media screen and (max-width: 1200px) {
+    flex-direction: column;
+    gap: 1rem;
+  }
+
   p {
-    color: getColor("tan-color");
     @include paragraph("laptop", "white");
+
+    @media screen and (max-width: 1200px) {
+      @include paragraph("phone", "white");
+    }
 
     transition:
       $crispyTransformTransition,
@@ -72,8 +105,12 @@
   }
 
   span {
-    color: getColor("tan-color");
     @include paragraph("laptop", "white");
+
+    @media screen and (max-width: 1200px) {
+      @include paragraph("phone", "white");
+      color: getColor("secondary-color-light-2.4");
+    }
 
     margin-left: $footerDistanceBetweenContactInfoSections;
     color: getColor("secondary-color-light-2.4");
@@ -84,6 +121,11 @@
   @include flexCenter(row);
   width: 100%;
   justify-content: space-between;
+
+  @media screen and (max-width: 1200px) {
+    flex-direction: column;
+    gap: 2rem;
+  }
 }
 
 .footerCopyright {
@@ -93,5 +135,10 @@
   p {
     color: getColor("tan-color");
     @include paragraph("laptop", "white");
+
+    @media screen and (max-width: 1200px) {
+      @include paragraph("phone", "white");
+      text-align: center;
+    }
   }
 }
