--- a/packages/client/src/scss/components/shared/SocialMediaIcons.module.scss
+++ b/packages/client/src/scss/components/shared/SocialMediaIcons.module.scss
@@ -5,6 +5,10 @@
   max-width: $socialMediaIconsMaxWidth;
   gap: $socialMediaIconsGap;
   list-style: none;
+
+  @media screen and (max-width: 600px) {
+    gap: 1rem;
+  }
 }
 
 .socialMediaIcon {
