--- a/packages/client/src/scss/components/shared/AuthFormPageTemplate.module.scss
+++ b/packages/client/src/scss/components/shared/AuthFormPageTemplate.module.scss
@@ -6,11 +6,17 @@
   width: 100%;
   height: 100%;
   top: 0;
-  right: 0;
+  left: 0;
 
   img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
+  }
+
+  @media screen and (max-width: 1200px) {
+    left: 0;
+    right: 0;
   }
 }
 
@@ -18,17 +24,36 @@
   @include flexCenter(column);
   position: absolute;
   top: 0;
-  right: 0;
+  left: 0;
   justify-content: flex-start;
 
-  background-color: getColorWithOpacity("signup-background-color", 0.7);
+  background-color: getColorWithOpacity("signup-background-color", 0.75);
 
   width: 30%;
   min-width: 600px;
   height: 100%;
 
   padding-bottom: 5rem;
-  margin-right: 8rem;
+  margin-left: 8rem;
+
+  @media screen and (max-width: 1200px) {
+    align-self: center;
+    left: auto;
+    width: 50%;
+    margin-left: 0;
+  }
+
+  @media screen and (max-width: 650px) {
+    align-self: center;
+    left: auto;
+    width: 100%;
+    margin-left: 0;
+    min-width: 0;
+
+    button {
+      align-self: center;
+    }
+  }
 }
 
 // Only used for scrollbar
@@ -56,6 +81,17 @@
 
   gap: 3rem;
 
+  @media screen and (max-width: 1200px) {
+    padding: 0 4rem;
+  }
+  @media screen and (max-width: 650px) {
+    padding: 0 2rem;
+    gap: 2rem;
+  }
+  @media screen and (max-width: 375px) {
+    padding: 0 1rem;
+  }
+
   header {
     @include flexCenter(column);
     width: 100%;
@@ -63,10 +99,26 @@
 
     h3 {
       @include heading("h3", "laptop", "black");
+
+      @media screen and (max-width: 1200px) {
+        @include heading("h3", "tablet", "black");
+      }
+
+      @media screen and (max-width: 650px) {
+        @include heading("h3", "phone", "black");
+      }
     }
 
     h6 {
       @include heading("h6", "phone", "black");
+
+      @media screen and (max-width: 1200px) {
+        @include heading("h6", "tablet", "black");
+      }
+
+      @media screen and (max-width: 650px) {
+        @include paragraph("phone", "black");
+      }
     }
 
     a {
@@ -77,6 +129,16 @@
       &:hover {
         font-style: italic;
         text-decoration: underline;
+      }
+
+      @media screen and (max-width: 1200px) {
+        @include heading("h6", "tablet", "black");
+        color: getColor("secondary-color-light-2.4");
+      }
+
+      @media screen and (max-width: 650px) {
+        @include paragraph("phone", "black");
+        color: getColor("secondary-color-light-2.4");
       }
     }
   }
@@ -89,7 +151,18 @@
   padding: 1rem;
   justify-content: flex-start;
 
+  @media screen and (max-width: 650px) {
+    gap: 0.5rem;
+  }
+
   h6 {
     @include heading("h6", "phone", "black");
+
+    @media screen and (max-width: 1200px) {
+      @include heading("h6", "tablet", "black");
+    }
+    @media screen and (max-width: 650px) {
+      @include paragraph("phone", "black");
+    }
   }
 }
