--- a/packages/client/src/scss/components/shared/EntityComponents.module.scss
+++ b/packages/client/src/scss/components/shared/EntityComponents.module.scss
@@ -22,11 +22,9 @@
 .entityComponentHeader {
   @include flexCenter(row);
   justify-content: flex-start;
-  margin-right: auto;
-  min-width: 30%;
+  width: auto;
   gap: 1rem;
   height: 100%;
-  width: 100%;
 
   img {
     height: 100%;
@@ -38,6 +36,13 @@
   h6 {
     @include heading("h6", "phone", "white");
     width: 100%;
+    padding-right: 0.5rem;
+    white-space: nowrap;
+    text-align: center;
+
+    @media screen and (max-width: 600px) {
+      @include paragraph("tablet", "white");
+    }
   }
 }
 
@@ -52,5 +57,9 @@
 
   p {
     @include paragraph("tablet", "white");
+
+    @media screen and (max-width: 1200px) {
+      @include paragraph("phone", "white");
+    }
   }
 }
