--- a/packages/client/src/scss/components/shared/Sidebar.module.scss
+++ b/packages/client/src/scss/components/shared/Sidebar.module.scss
@@ -11,10 +11,16 @@
   position: fixed;
   top: 0;
   right: 0;
-  z-index: 10;
+  z-index: 99;
   gap: 2rem;
   transform: translateX(150%);
   transition: $crispyTransformTransition;
+
+  @media screen and (max-width: 900px) {
+    width: 100%;
+    min-width: 100%;
+    overflow-y: scroll;
+  }
 }
 
 .sidebarHeader {
@@ -44,12 +50,21 @@
       height: 100%;
       color: getColor("secondary-color-3.4");
     }
+
+    @media screen and (max-width: 600px) {
+      margin-top: 0.5rem;
+      margin-left: 0.5rem;
+    }
   }
 
   h3 {
     @include heading("h3", "laptop", "black");
     text-align: center;
     width: 100%;
+
+    @media screen and (max-width: 600px) {
+      @include heading("h3", "tablet", "black");
+    }
   }
 }
 
