--- a/packages/client/src/scss/components/shared/ViewEntityOptions.module.scss
+++ b/packages/client/src/scss/components/shared/ViewEntityOptions.module.scss
@@ -3,15 +3,38 @@
 .viewEntityOptionsContainer {
   @include flexCenter(row);
   width: 100%;
-  padding: 2.5rem 5rem;
+  padding: 2.5rem;
   justify-content: space-evenly;
-  gap: auto;
+  gap: 1rem;
   background-color: getColorWithOpacity("secondary-color-3.1", 0.8);
   border-bottom: 1.5px solid getColor("black-75-1");
+
+  @media screen and (max-width: 1650px) {
+    flex-wrap: wrap;
+    row-gap: 2rem;
+  }
+
+  @media screen and (max-width: 800px) {
+    padding: 2.5rem 1.25rem;
+  }
+
+  @media screen and (max-width: 600px) {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 
   label {
     @include heading("h6", "laptop", "black");
     font-weight: 550;
+
+    @media screen and (max-width: 1200px) {
+      @include heading("h6", "tablet", "black");
+    }
+
+    @media screen and (max-width: 600px) {
+      @include heading("h6", "phone", "black");
+    }
   }
 
   select {
@@ -21,8 +44,20 @@
     border: 1.5px solid getColor("black-75-1");
     background-color: getColor("tan-color");
     padding: 0.5rem 2.5rem;
-    border-radius: 15px;
+    border-radius: 10px;
     appearance: none;
+
+    @media screen and (max-width: 1200px) {
+      @include heading("h6", "phone", "black");
+      background-color: getColor("tan-color");
+    }
+
+    @media screen and (max-width: 600px) {
+      @include paragraph("tablet", "black");
+      width: 100%;
+      font-weight: 550;
+      padding: 0.35rem 1.75rem;
+    }
   }
 }
 
@@ -30,12 +65,25 @@
   @include flexCenter(row);
   justify-content: flex-start;
   gap: 0.5rem;
+
+  @media screen and (max-width: 600px) {
+    align-items: flex-start;
+    width: 80%;
+    flex-direction: column;
+  }
 }
 
 .sortByEntityPropertyContainer {
   @include flexCenter(row);
   justify-content: flex-start;
-  gap: 1rem;
+  gap: 0.5rem;
+
+  @media screen and (max-width: 600px) {
+    align-items: flex-start;
+
+    flex-direction: column;
+    width: 80%;
+  }
 
   button {
     @include flexCenter(row);
@@ -43,6 +91,10 @@
     background-color: inherit;
     border: none;
     transition: $crispyTransformTransition;
+
+    @media screen and (max-width: 600px) {
+      font-size: 1.25rem;
+    }
   }
 }
 
@@ -50,6 +102,12 @@
   @include flexCenter(row);
   justify-content: flex-start;
   gap: 0.5rem;
+
+  @media screen and (max-width: 600px) {
+    flex-direction: column;
+    width: 80%;
+    align-items: flex-start;
+  }
 
   input {
     background-color: getColor("tan-color");
@@ -70,11 +128,18 @@
     &:hover {
       background-color: getColor("tan-color-dark");
     }
+    @media screen and (max-width: 600px) {
+      height: 2rem;
+    }
   }
 }
 
 .searchEntityInputContainer {
   @include flexCenter(row);
+
+  @media screen and (max-width: 600px) {
+    width: 100%;
+  }
 
   svg {
     font-size: 2rem;
@@ -84,6 +149,11 @@
     &:hover {
       transform: scale(1.1);
     }
+
+    @media screen and (max-width: 600px) {
+      font-size: 1.25rem;
+      margin-left: -1.5rem;
+    }
   }
 }
 
@@ -91,6 +161,12 @@
   @include flexCenter(row);
   justify-content: center;
   gap: 0.25rem;
+
+  @media screen and (max-width: 600px) {
+    align-items: center;
+    justify-content: flex-start;
+    width: 80%;
+  }
 
   svg {
     font-size: 2.5rem;
@@ -101,6 +177,19 @@
     }
     &:nth-of-type(2) {
       font-size: 2rem;
+
+      @media screen and (max-width: 600px) {
+        font-size: 2.2rem;
+      }
+    }
+
+    @media screen and (max-width: 600px) {
+      font-size: 3rem;
     }
   }
+}
+
+.sortByEntityPropertyContainerOrder {
+  @include flexCenter(row);
+  gap: 0.5rem;
 }
