--- a/packages/client/src/scss/pages/About.module.scss
+++ b/packages/client/src/scss/pages/About.module.scss
@@ -2,64 +2,61 @@
 
 .aboutContainer {
   @include pageLayout();
+  background-color: getColor("primary-3");
 }
 
 .aboutContent {
   @include flexCenter(column);
-  row-gap: 2rem;
-  padding: 4rem;
+  width: 100%;
 }
 
 .aboutContentSection {
   @include flexCenter(column);
-  padding: 3rem;
-  background-color: blue;
   width: 100%;
-  gap: 2.5rem;
+  gap: 2rem;
+  padding: 8rem;
+  padding-bottom: 13.5rem;
+
+  &:nth-of-type(1) {
+    background-color: getColor("secondary-color-3.1");
+  }
 
   &:nth-of-type(2) {
-    background-color: getColor("primary-1");
+    background-color: getColor("secondary-color-3.3");
   }
 
   &:nth-of-type(3) {
-    background-color: getColor("secondary-color-1.4");
+    background-color: getColor("primary-1");
+
+    h1,
+    p {
+      color: getColor("tan-color-extra-light");
+    }
   }
 
   &:nth-of-type(4) {
-    background-color: getColor("secondary-color-1.1");
+    background-color: getColor("secondary-color-3.3");
   }
 
   &:nth-of-type(5) {
-    background-color: getColor("secondary-color-1.2");
+    background-color: getColor("secondary-color-3.1");
   }
 
   h1 {
-    @include heading("h2", "laptop", "black");
+    @include heading("h1", "laptop", "black");
     text-align: center;
-    letter-spacing: 3.5px;
-    color: getColor("tan-color-extra-light");
   }
 
-  h2 {
+  h4 {
     @include heading("h4", "laptop", "black");
     align-self: flex-start;
     text-align: left;
-    letter-spacing: 2.5px;
     margin-top: 3rem;
-    color: getColor("tan-color-extra-light");
   }
 
   p {
-    width: 100%;
-    text-align: center;
-    padding: 0 8rem;
-    font-size: 2.5rem;
-    font-family: "EB Garamond", serif;
-    color: getColor("tan-color-extra-light");
-  }
-
-  span {
-    color: red;
+    @include heading("h5", "laptop", "black");
+    width: 80%;
   }
 
   a {
@@ -79,8 +76,8 @@
 
 .aboutContentSectionLogos {
   @include flexCenter(row);
-  margin-top: 3rem;
-  padding: 0 8rem;
+  justify-content: flex-start;
+  margin-top: 2rem;
   width: 80%;
   flex-wrap: wrap;
   list-style: none;
@@ -90,6 +87,11 @@
   li {
     @include flexCenter(row);
     transition: $crispyTransformTransition;
+
+    img {
+      width: 7.5rem;
+      height: 7.5rem;
+    }
 
     &:hover {
       transform: scale(1.1);
