--- a/packages/client/src/scss/pages/FAQ.module.scss
+++ b/packages/client/src/scss/pages/FAQ.module.scss
@@ -2,53 +2,44 @@
 
 .faqContainer {
   @include pageLayout();
+  background-color: getColor("primary-3");
 }
 
 .faqContent {
   @include flexCenter(column);
-  row-gap: 2rem;
-  padding: 3rem;
+  width: 100%;
 }
 
 .faqContentSection {
   @include flexCenter(column);
-  padding: 2rem;
-  background-color: blue;
   width: 100%;
-  gap: 3rem;
-  border-top: 1.5px solid getColor("black-100-1");
-  border-bottom: 1.5px solid getColor("black-100-1");
+  gap: 4rem;
+  padding: 8rem;
+  padding-bottom: 13.5rem;
+
+  &:nth-of-type(1) {
+    background-color: getColor("secondary-color-3.1");
+  }
 
   &:nth-of-type(2) {
-    background-color: getColor("primary-1");
+    background-color: getColor("secondary-color-3.3");
   }
 
   &:nth-of-type(3) {
-    background-color: getColor("secondary-color-1.4");
+    background-color: getColor("primary-1");
+
+    h1 {
+      color: getColor("tan-color-extra-light");
+    }
   }
 
   &:nth-of-type(4) {
-    background-color: getColor("secondary-color-1.1");
-  }
-
-  &:nth-of-type(5) {
-    background-color: getColor("secondary-color-1.2");
+    background-color: getColor("secondary-color-3.3");
   }
 
   h1 {
-    @include heading("h2", "laptop", "black");
+    @include heading("h1", "laptop", "black");
     text-align: center;
-    letter-spacing: 3.5px;
-    color: getColor("tan-color-extra-light");
-  }
-
-  p {
-    width: 100%;
-    text-align: center;
-    padding: 0 8rem;
-    font-size: 2.5rem;
-    font-family: "EB Garamond", serif;
-    color: getColor("tan-color-extra-light");
   }
 
   span {
@@ -70,13 +61,17 @@
   }
 }
 
+.faqContentSectionParagraph {
+  @include heading("h5", "laptop", "black");
+}
+
 .faqContentSectionAccordions {
   @include flexCenter(column);
   align-items: flex-start;
   list-style: none;
   width: 100%;
   gap: 4rem;
-  margin-top: 3rem;
+  margin-top: 2rem;
 
   li {
     @include flexCenter(row);
@@ -91,7 +86,8 @@
   width: 100%;
   height: 100%;
   background-color: getColor("tan-color");
-  border: 1.5px solid getColor("black-100-1");
+  border: 1.5px solid getColor("black-75-1");
+  border-radius: 10px;
 }
 
 .faqAccordionHeader {
@@ -99,16 +95,14 @@
   justify-content: flex-start;
   width: 100%;
   padding: 1rem 4rem;
-  gap: 5rem;
-  border-bottom: 1.5px solid getColor("black-100-1");
+  gap: 3.5rem;
 
   svg {
     font-size: 2.5rem;
   }
 
-  h3 {
-    font-size: 24px;
-    letter-spacing: 0.75px;
+  h5 {
+    @include heading("h5", "tablet", "black");
   }
 }
 
@@ -117,14 +111,9 @@
   width: 100%;
   transition: height 0.2s ease-out;
   overflow: hidden;
-  padding: 0rem 11.5rem;
+  padding: 0rem 10rem;
 
   p {
-    width: 100%;
-    color: getColor("black-100-1");
-    font-size: 1.5rem;
-    letter-spacing: 0.35px;
-    padding: 0;
-    text-align: left;
+    @include paragraph("laptop", "black");
   }
 }
