--- a/packages/client/src/scss/components/page/EntityInfo.module.scss
+++ b/packages/client/src/scss/components/page/EntityInfo.module.scss
@@ -10,6 +10,13 @@
   width: 100%;
   padding: 8rem;
   gap: 8rem;
+
+  @media screen and (max-width: 1300px) {
+    padding: 4rem 2rem;
+  }
+  @media screen and (max-width: 600px) {
+    padding: 4rem 1rem;
+  }
 }
 
 .entityInfoAppearancesContainer {
@@ -21,6 +28,13 @@
   h5 {
     @include heading("h5", "laptop", "black");
     width: 100%;
+
+    @media screen and (max-width: 1200px) {
+      @include heading("h5", "tablet", "black");
+    }
+    @media screen and (max-width: 600px) {
+      @include heading("h5", "phone", "black");
+    }
   }
 }
 
@@ -29,6 +43,18 @@
   align-items: flex-start;
   width: 100%;
   gap: 8rem;
+
+  @media screen and (max-width: 1500px) {
+    gap: 4rem;
+  }
+  @media screen and (max-width: 1300px) {
+    gap: 2.5rem;
+  }
+
+  @media screen and (max-width: 1200px) {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .entityInfoDetailsHero {
@@ -40,9 +66,20 @@
   width: 100%;
   gap: 2rem;
 
+  @media screen and (max-width: 600px) {
+    padding: 2rem 0.5rem;
+  }
+
   h4 {
     @include heading("h4", "laptop", "black");
     font-weight: 550;
+
+    @media screen and (max-width: 1200px) {
+      @include heading("h4", "tablet", "black");
+    }
+    @media screen and (max-width: 600px) {
+      @include heading("h4", "phone", "black");
+    }
   }
 }
 
@@ -54,12 +91,26 @@
     @include heading("h2", "laptop", "black");
     font-weight: 550;
     letter-spacing: 3px;
+
+    @media screen and (max-width: 1200px) {
+      @include heading("h2", "tablet", "black");
+    }
+    @media screen and (max-width: 600px) {
+      @include heading("h2", "phone", "black");
+    }
   }
 
   h3 {
-    font-size: 2rem;
+    @include heading("h3", "laptop", "black");
     font-weight: 550;
-    letter-spacing: 1px;
+    letter-spacing: 3px;
+
+    @media screen and (max-width: 1200px) {
+      @include heading("h3", "tablet", "black");
+    }
+    @media screen and (max-width: 600px) {
+      @include heading("h3", "phone", "black");
+    }
   }
 }
 
@@ -88,9 +139,16 @@
   gap: 64px;
 
   h3 {
-    @include heading("h2", "laptop", "black");
+    @include heading("h3", "laptop", "black");
     font-weight: 550;
     letter-spacing: 3px;
+
+    @media screen and (max-width: 1200px) {
+      @include heading("h3", "tablet", "black");
+    }
+    @media screen and (max-width: 600px) {
+      @include heading("h3", "phone", "black");
+    }
   }
 }
 
@@ -123,9 +181,16 @@
   gap: 64px;
 
   h3 {
-    @include heading("h2", "laptop", "black");
+    @include heading("h3", "laptop", "black");
     font-weight: 550;
     letter-spacing: 3px;
+
+    @media screen and (max-width: 1200px) {
+      @include heading("h3", "tablet", "black");
+    }
+    @media screen and (max-width: 600px) {
+      @include heading("h3", "phone", "black");
+    }
   }
 }
 
@@ -137,12 +202,13 @@
   h4 {
     @include heading("h4", "laptop", "black");
     font-weight: 550;
-    letter-spacing: 1.5px;
-  }
 
-  iframe {
-    width: 50%;
-    min-height: 20rem;
+    @media screen and (max-width: 1200px) {
+      @include heading("h4", "tablet", "black");
+    }
+    @media screen and (max-width: 600px) {
+      @include heading("h4", "phone", "black");
+    }
   }
 
   p {
@@ -151,9 +217,9 @@
     min-height: 20rem;
     background-color: getColor("tan-color");
     border: 1.5px solid getColor("black-100-1");
-    font-size: 1.25rem;
     font-weight: 400;
     letter-spacing: 0.35px;
+    @include paragraph("tablet", "black");
   }
 }
 
@@ -168,16 +234,37 @@
   h4 {
     @include heading("h4", "laptop", "black");
     font-weight: 550;
+
+    @media screen and (max-width: 1200px) {
+      @include heading("h4", "tablet", "black");
+    }
+    @media screen and (max-width: 600px) {
+      @include heading("h4", "phone", "black");
+    }
   }
 
   h5 {
     @include heading("h5", "laptop", "black");
     font-weight: 550;
+
+    @media screen and (max-width: 1200px) {
+      @include heading("h5", "tablet", "black");
+    }
+    @media screen and (max-width: 600px) {
+      @include heading("h5", "phone", "black");
+    }
   }
 
   h6 {
     @include heading("h6", "laptop", "black");
     font-weight: 550;
+
+    @media screen and (max-width: 1200px) {
+      @include heading("h6", "tablet", "black");
+    }
+    @media screen and (max-width: 600px) {
+      @include heading("h6", "phone", "black");
+    }
   }
 }
 
@@ -186,6 +273,13 @@
   align-items: flex-start;
   justify-content: space-between;
   width: 100%;
+
+  @media screen and (max-width: 1200px) {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 4rem;
+  }
 }
 
 .entityInfoVideoTutorial {
@@ -193,6 +287,20 @@
   width: 40rem;
   height: 30rem;
   gap: 1rem;
+  border: 1px solid black;
+
+  @media screen and (max-width: 1000px) {
+    width: 30rem;
+    height: 22.5rem;
+  }
+  @media screen and (max-width: 600px) {
+    width: 20rem;
+    height: 15rem;
+  }
+  @media screen and (max-width: 375px) {
+    width: 15rem;
+    height: 11.25rem;
+  }
 
   iframe {
     border: 1.5px solid getColor("black-75-1");
@@ -212,6 +320,10 @@
     border-radius: 10px;
     border: 1.5px solid getColor("black-75-1");
     padding: 1rem;
+
+    @media screen and (max-width: 400px) {
+      text-align: center;
+    }
   }
 }
 
@@ -225,6 +337,14 @@
 
   h4 {
     @include heading("h4", "laptop", "black");
+    font-weight: 550;
+
+    @media screen and (max-width: 1200px) {
+      @include heading("h4", "tablet", "black");
+    }
+    @media screen and (max-width: 600px) {
+      @include heading("h4", "phone", "black");
+    }
   }
 }
 
@@ -243,6 +363,12 @@
 
 .entityInfoSectionH5 {
   @include heading("h5", "laptop", "black");
+  @media screen and (max-width: 1200px) {
+    @include heading("h5", "tablet", "black");
+  }
+  @media screen and (max-width: 600px) {
+    @include heading("h6", "phone", "black");
+  }
 }
 
 .entityInfoSectionItems {
@@ -252,13 +378,27 @@
   flex-wrap: wrap;
   list-style: none;
   width: 100%;
-  row-gap: 5rem;
+  gap: 2rem;
 
   li {
     @include flexCenter(row);
-    justify-content: flex-start;
-    width: 25%;
-    max-width: 25%;
+    width: 20%;
+    max-width: 20%;
+
+    @media screen and (max-width: 1500px) {
+      width: 30%;
+      max-width: 30%;
+    }
+
+    @media screen and (max-width: 1000px) {
+      width: 45%;
+      max-width: 45%;
+    }
+
+    @media screen and (max-width: 700px) {
+      width: 95%;
+      max-width: 95%;
+    }
   }
 }
 
@@ -270,8 +410,20 @@
   background-color: getColorWithOpacity("secondary-color-3.1", 0.5);
   border-radius: 25px;
 
+  @media screen and (max-width: 500px) {
+    padding: 4rem 2rem;
+    gap: 1.5rem;
+  }
+
   h4 {
     @include heading("h4", "laptop", "black");
+    text-align: center;
+    @media screen and (max-width: 1200px) {
+      @include heading("h4", "tablet", "black");
+    }
+    @media screen and (max-width: 600px) {
+      @include heading("h4", "phone", "black");
+    }
   }
 }
 
@@ -280,4 +432,13 @@
   align-items: flex-start;
   width: 100%;
   gap: 8rem;
+
+  @media screen and (max-width: 1000px) {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  @media screen and (max-width: 500px) {
+    gap: 4rem;
+  }
 }
