--- a/packages/client/src/scss/components/shared/EntityComponents.module.scss
+++ b/packages/client/src/scss/components/shared/EntityComponents.module.scss
@@ -2,6 +2,7 @@
 
 .entityComponent {
   @include flexCenter(row);
+  justify-content: flex-start;
   width: 100%;
   height: 5rem;
   background-color: getColor("primary-1");
@@ -26,6 +27,11 @@
   gap: 1rem;
   height: 100%;
 
+  @media screen and (max-width: 400px) {
+    width: 100%;
+    justify-content: center;
+  }
+
   img {
     height: 100%;
     width: auto;
@@ -42,6 +48,8 @@
 
     @media screen and (max-width: 600px) {
       @include paragraph("tablet", "white");
+      padding-right: 0;
+      white-space: wrap;
     }
   }
 }
@@ -54,6 +62,12 @@
   width: 100%;
   height: 100%;
   margin-right: 2rem;
+
+  @media screen and (max-width: 600px) {
+    margin-right: 0;
+    width: 0;
+    height: 0;
+  }
 
   p {
     @include paragraph("tablet", "white");
